# sqlx-named

./: .env  Cargo.toml  README.md  docker-compose.yml
src/: lib.rs  parse.rs  util.rs
tests/: macros.rs  test-query-named.sql  test-query-no-args.sql  test-query-unnamed.sql
