[package]
name = "sqlx-named"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
proc-macro = true

[dependencies]
const-str = "0.5.7"
indexmap = "2.5"
proc-macro2 = "1.0"
quote = "1.0"
sqlparser = "0.50"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.89"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "migrate"] }
tokio = { version = "1.40.0", features = ["full"] }

